<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item 
        android:id="@+id/menu_map"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/menu_map"
        android:onClick="load_map"/>
    
    <item 
        android:id="@+id/menu_about"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/menu_about"/>
    
    <item 
        android:id="@+id/menu_login"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/menu_login"/>
    
    <item 
        android:id="@+id/menu_logout"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/menu_logout"/>
    
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>

</menu>